--- a/composer.json
+++ b/composer.json
@@ -17,10 +17,11 @@
         "laravel/ui": "^3.4"
     },
     "require-dev": {
-        "barryvdh/laravel-ide-helper": "^2.12",
+        "barryvdh/laravel-ide-helper": "^2.10",
         "facade/ignition": "^2.5",
+        "deployer/deployer": "^7.3",
         "fakerphp/faker": "^1.9.1",
-        "laravel/sail": "^1.0.1",
+        "laravel/sail": "^1.19",
         "mockery/mockery": "^1.4.2",
         "nunomaduro/collision": "^5.0",
         "phpunit/phpunit": "^9.3.3"
