--- a/composer.json
+++ b/composer.json
@@ -17,6 +17,8 @@
     },
     "require-dev": {
         "barryvdh/laravel-ide-helper": "^2.10",
+        "deployer/deployer": "^7.3",
+        "deployer/recipes": "^6.2",
         "facade/ignition": "^2.5",
         "fakerphp/faker": "^1.9.1",
         "laravel/sail": "^1.0.1",
