--- a/composer.json
+++ b/composer.json
@@ -18,8 +18,9 @@
     },
     "require-dev": {
         "barryvdh/laravel-ide-helper": "^2.10",
-        "facade/ignition": "^2.5",
         "deployer/deployer": "^7.3",
+        "deployer/recipes": "^6.2",
+        "facade/ignition": "^2.5",
         "fakerphp/faker": "^1.9.1",
         "laravel/sail": "^1.19",
         "mockery/mockery": "^1.4.2",
